tests/invalid/list_magic_lt_wrong_type/main.py
def run_case() -> None:
    xs: list[int] = [1, 2]
    out: bool = xs.__lt__(42)


if __name__ == "__main__":
    run_case()
